--- a/src/CSS/navbar.css
+++ b/src/CSS/navbar.css
@@ -10,10 +10,16 @@
 	align-items: center;
 }
 
+.home-link {
+	text-decoration: none;
+}
+
 .logo {
 	height: 100%;
 	font-size: 32px;
 	font-family: "El Messiri", sans-serif;
+	color: white;
+	text-decoration: none;
 	/* padding-left: 80px; */
 }
 
