--- a/src/CSS/login.css
+++ b/src/CSS/login.css
@@ -18,6 +18,10 @@
 	box-shadow: 0px 4px 4px 4px rgba(0, 0, 0, 0.17);
 }
 
+.login-image {
+	object-fit: contain;
+}
+
 .login-header {
 	font-family: "Laila", sans-serif;
 	font-size: 36px;
@@ -87,4 +91,22 @@
 	font-weight: 500;
 	color: black;
 	font-family: "Poppins";
+}
+
+.ui .error {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.list {
+	list-style: none;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	padding: 5px;
+	font-family: "Poppins";
+	align-items: center;
+	justify-content: center;
 }
