--- a/src/CSS/navbar.css
+++ b/src/CSS/navbar.css
@@ -12,6 +12,9 @@
 
 .home-link {
 	text-decoration: none;
+	display: flex;
+	width: 100%;
+	justify-content: center;
 }
 
 .logo {
@@ -27,6 +30,8 @@
 	display: flex;
 	align-items: center;
 	height: 100%;
+	width: 100%;
+	justify-content: center;
 	/* padding: 40px; */
 	text-align: center;
 }
@@ -40,11 +45,29 @@
 	background-color: black;
 	outline: none;
 	color: white;
+	padding: 0 30px;
+	font-weight: 600;
+	cursor: pointer;
+}
+
+.logout-btn {
+	font-family: "Bona Nova", serif;
+	border: none;
+	font-size: 24px;
+	background-color: black;
+	outline: none;
+	color: white;
+	padding: 0 30px;
 	font-weight: 600;
 	cursor: pointer;
 }
 
 .login-btn:hover {
+	font-size: 27px;
+	transition: all 0.3s;
+}
+
+.logout-btn:hover {
 	font-size: 27px;
 	transition: all 0.3s;
 }
