--- a/src/CSS/card.css
+++ b/src/CSS/card.css
@@ -1,11 +1,10 @@
 .card-container {
 	height: 100%;
 	width: 100%;
-	padding: 100px;
 }
 
 .card-wrapper {
-	box-shadow: 0px 4px 4px 4px rgba(0, 0, 0, 0.17);
+	/* //box-shadow: 0px 4px 4px 4px rgba(0, 0, 0, 0.17); */
 	height: max-content;
 	width: 350px;
 	border-radius: 10px;
@@ -52,6 +51,22 @@
 	font-size: 20px;
 }
 
-.add-desc {
-	padding: 15px;
+.card-add-review-button {
+	width: 100%;
+	text-align: center;
+	font-size: 18px;
+	font-weight: 700;
+	border: none;
+	outline: none;
+	border-radius: 3px;
+	display: flex;
+	background-color: black;
+	flex-direction: column;
+	color: white;
+	align-items: center;
+	min-height: 36px;
+	font-family: "Poppins", sans-serif;
+	margin-top: 10px;
+	padding: 8px 10px;
+	cursor: pointer;
 }
