--- a/src/CSS/card.css
+++ b/src/CSS/card.css
@@ -71,6 +71,15 @@
 	cursor: pointer;
 }
 
+.desc-popup {
+	z-index: 3;
+}
+
+.card-ui {
+	padding-top: 10px;
+	text-align: center;
+}
+
 .label-card {
 	font-size: 16px;
 	padding-bottom: 3px;
