--- a/src/CSS/card.css
+++ b/src/CSS/card.css
@@ -52,7 +52,7 @@
 }
 
 .card-add-review-button {
-	width: 100%;
+	width: 48%;
 	text-align: center;
 	font-size: 18px;
 	font-weight: 700;
@@ -61,6 +61,32 @@
 	border-radius: 3px;
 	display: flex;
 	background-color: black;
+	flex-direction: column;
+	color: white;
+	align-items: center;
+	min-height: 36px;
+	font-family: "Poppins", sans-serif;
+	margin-top: 10px;
+	padding: 8px 10px;
+	cursor: pointer;
+}
+
+.func-btns {
+	width: 100%;
+	justify-content: space-between;
+	display: flex;
+}
+
+.card-delete-button {
+	width: 48%;
+	text-align: center;
+	font-size: 18px;
+	font-weight: 700;
+	border: none;
+	outline: none;
+	border-radius: 3px;
+	display: flex;
+	background-color: rgb(255, 5, 5);
 	flex-direction: column;
 	color: white;
 	align-items: center;
